--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -14,14 +14,16 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.23",
+    "expo-location": "~18.0.4",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-maps": "^1.18.0",
+    "react-native-paper": "^5.13.1",
     "react-native-web": "^0.19.13",
     "react-native-webview": "^13.12.5",
-    "expo-location": "~18.0.4"
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
